// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineUser renders reliably 1`] = `
<View
  accessibilityHint="Navigates to user profile"
  accessibilityLabel="User some_login"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "flexShrink": 1,
    }
  }
  testID="InlineUser"
>
  <View
    style={
      {
        "marginRight": 7,
      }
    }
  >
    <mockUserIcon
      testID="mockUserIcon"
    />
  </View>
  <Text
    ellipsizeMode="tail"
    maxFontSizeMultiplier={1}
    numberOfLines={1}
    selectable={true}
    style={
      {
        "color": "rgba(69, 69, 69, 1)",
        "fontFamily": "Lato-Medium",
        "fontSize": 13,
        "lineHeight": 18,
        "textAlign": "left",
        "width": "75%",
      }
    }
  >
    some_login
  </Text>
</View>
`;

exports[`InlineUser when offline renders reliably 1`] = `
<View
  accessibilityHint="Navigates to user profile"
  accessibilityLabel="User some_login"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "flexShrink": 1,
    }
  }
  testID="InlineUser"
>
  <View
    style={
      {
        "marginRight": 7,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#454545",
            "fontSize": 22,
          },
          null,
          {
            "fontFamily": "INatIcon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="InlineUser.FallbackPicture"
    >
      
    </Text>
  </View>
  <Text
    ellipsizeMode="tail"
    maxFontSizeMultiplier={1}
    numberOfLines={1}
    selectable={true}
    style={
      {
        "color": "rgba(69, 69, 69, 1)",
        "fontFamily": "Lato-Medium",
        "fontSize": 13,
        "lineHeight": 18,
        "textAlign": "left",
        "width": "75%",
      }
    }
  >
    some_login
  </Text>
</View>
`;

exports[`InlineUser when user has no icon set renders reliably 1`] = `
<View
  accessibilityHint="Navigates to user profile"
  accessibilityLabel="User some_login"
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "flexShrink": 1,
    }
  }
  testID="InlineUser"
>
  <View
    style={
      {
        "marginRight": 7,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#454545",
            "fontSize": 22,
          },
          null,
          {
            "fontFamily": "INatIcon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="InlineUser.FallbackPicture"
    >
      
    </Text>
  </View>
  <Text
    ellipsizeMode="tail"
    maxFontSizeMultiplier={1}
    numberOfLines={1}
    selectable={true}
    style={
      {
        "color": "rgba(69, 69, 69, 1)",
        "fontFamily": "Lato-Medium",
        "fontSize": 13,
        "lineHeight": 18,
        "textAlign": "left",
        "width": "75%",
      }
    }
  >
    some_login
  </Text>
</View>
`;
